src/test/deca/context/invalid/Objet/redeclarationMethod.des
The identifier fct is already used for  a  method or a field in the same class

